# pyfreeze

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/django/: Dockerfile  entrypoint.sh  manage-wrapper.sh
docker/flask/: Dockerfile  entrypoint.sh
examples/django_example/: manage.py  requirements.txt
examples/flask_example/: app.py
python/pyfreeze/: __init__.py  _cli.py  _snapshot_info.py  django_plugin.py  flask_plugin.py  plugins.py
src/: error.rs  lib.rs  main.rs
src/capture/: fd_capture.rs  graph_walker.rs  mod.rs
src/loader/: mod.rs
src/snapshot/: format.rs  hash.rs  metadata.rs  mod.rs
tests/python/: conftest.py  test_api.py  test_plugins.py  test_snapshot_info.py
tests/rust/: snapshot_roundtrip.rs
