[package]
name = "pyfreeze-rs"
version = "0.1.0"
edition = "2021"
authors = ["PyFreeze-RS Contributors"]
description = "Dormant Process Resumption for Python — CPython import-phase snapshots"
license = "MIT"

# ── Binaries ────────────────────────────────────────────────────────────────
[[bin]]
name = "pyfreeze"
path = "src/main.rs"

# ── Library (also exposed as a Python extension module via PyO3) ─────────────
[lib]
name = "pyfreeze_rs"
crate-type = ["cdylib", "rlib"]

# ── Dependencies ─────────────────────────────────────────────────────────────
[dependencies]
# Python <-> Rust bridge
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
bincode     = "1.3"
serde_json  = "1.0"   # human-readable metadata sidecar

# Hashing / validation
sha2 = "0.10"
hex  = "0.4"

# Memory mapping (snapshot file I/O)
memmap2 = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow    = "1.0"
thiserror = "1.0"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

# Unix-specific system calls
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "mman", "fs"] }

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
